# QMS

./: .env.example  .env.production.example  .gitignore  DEPLOYMENT_LESSONS_LEARNED.md  DEPLOY_QUICK_START.md  DEV_GUIDE.md  LIGHTSAIL_DEPLOY.md  PROD_GUIDE.md  README.md  backup.bat  backup.sh  backup_data.bat  create_admin.bat  deploy.bat  deploy.sh  deploy_frontend.sh  deploy_to_production.bat  deploy_to_production.sh  pyproject.toml  start_server.bat  start_server.sh  stop_server.bat  stop_server.sh  test_performance.csv  test_simple.csv  update_production.sh  update_system.bat
.cursor/: account.mdc  audit.mdc  backup.mdc  customer_complaints.mdc  dashboard.mdc  kpi_target.mdc  nonconformance.mdc  performance.mdc  schedules.mdc  sticky_notes.mdc
backend/: create_admin.py  enable_wal.py  gunicorn_config.py  uvicorn_config.py
backend/accounts/: admin.py  authentication.py  models.py  serializers.py  tokens.py  urls.py  views.py
backend/audit/: admin.py  (+3 more)
docs/: KPI 목표 등록 페이지.md  KPI_목표_관리_사용_가이드.md  accounts_앱.md  audit_앱.md  customer_complaints_앱.md  dashboard_앱.md  kpi_targets_앱.md  nonconformance_앱.md  performance_앱.md  schedules_앱.md  todo_list.md  감사_로그_배지_색상_매핑_검증.md  감사_로그_페이지.md  고객불만 페이지.md  대시보드 페이지.md  데이터_다운로드_기능.md  디자인 가이드.md  백업_관리_시스템.md  부적합 등록 관리 페이지.md  사용자 관리 페이지.md  실적 등록 페이지.md  일정관리 페이지.md  포스트잇보드 페이지.md  포스트잇보드_API_체크리스트.md  포스트잇보드_UI개선_최종.md  포스트잇보드_개선사항.md  포스트잇보드_구현_완료.md  포스트잇보드_최종_개선사항.md  회원가입 & 로그인 페이지.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js
nginx/: qms.conf
systemd/: qms-backend.service
(+123 files in other folders)
